--- a/html-css-kadai_013/index.html
+++ b/html-css-kadai_013/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo"><img src="images/logo-sp.png" alt="トップページに戻る"></a>
+        <a href="index.html" id="logo"><img src="images/logo.png" alt="トップページに戻る"></a>
         <!--PC用ナビ-->
         <nav id="nav-pc">
             <a href="index.html#concept">CONCEPT</a>
